<resources>
    <string name="app_name">MyFitness App</string>
    <string name="hint_userName">Username</string>
    <string name="hintPassword">Password</string>
    <string name="txtLogin">Login</string>
    <string name="txtNoAttempts">"No. of Incorrect Attempts: "</string>
    <string name="txtWelcome">"Welcome to our app"</string>
    <string name="txtTitleLogin">Login</string>
    <string name="txtSignUp">New User? Sign up here.</string>
    <string name="btnTextSignUp">Sign up</string>
    <string name="txtTitleRegister">Register a new account</string>
    <string name="hintFullName">Full Name</string>
    <string name="hintWeight">Enter your weight (in kg)</string>
    <string name="hintHeight">Enter your height (in cm)</string>
    <string name="txtRegister">Create an account</string>
    <string name="btnBack">Back to Login page</string>
    <string name="txtGoogleLogin">OR</string>
    <string name="btnLogOut">Sign Out</string>
    <string name="lookUpText">LookUp . . .</string>
    <string name="title_activity_background">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="startBtn">Sign in</string>
    <string name="toolbar_Text">MyFitness</string>
    <string name="imgWorkoutWelcomepage">Motivation picture</string>
    <string name="btnBeginWorkOut">Click Here to Start Working Out</string>
    <string name="txtViewTitle">Fight Like a Warrior</string>
    <string name="imgViewLarge">It changes according to imges you select on the gridView</string>
    <string name="btnChooseTheBodyPart">Click Here to go to the specific exercises of choosen body parts</string>
    <string name="txtViewPressOnExercise">Press on The Exercise you want to workout</string>
    <string name="imgViewExercisesMenu" />
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User\'s Full Name</string>
    <string name="nav_header_subtitle">Member</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Sign Out</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile Information</string>
    <string name="menu_workout">Workout plan</string>
    <string name="Workout_Tab">Workouts</string>
    <string name="Diet_Tab">Diets</string>
    <string name="txtTitleProfileInfo">Profile Information</string>
    <string name="txtFullNameLabel">Full Name</string>
    <string name="txtWeightLabel">Weight</string>
    <string name="txtHeightLabel">Height</string>
    <string name="txtTitleProfileEdit">Profile Edit</string>
    <string name="btnTextUpdateProfile">Update Profile</string>
    <string name="btnTextBackHome">Back to Home page</string>
    <string name="browserBtn">Go to Recipe</string>
    <string name="CableKneelingCrunch">Instructions\n
Preparation\n

Kneel below high pulley. Grasp cable rope attachment with both hands. Place wrists against head. Position hips back and flex hips, allowing resistance on cable pulley to lift torso upward so spine is hyperextended.

\nExecution\n

With hips stationary, flex waist so elbows travel toward middle of thighs. Return and repeat.

\nComments\n
Note movement occurs in waist, not hips. See Spot Reduction Myth. Hyperextension of spine at top of motion is achieved by anterior rotation of pelvis with flexed hips.></string>
    <string name="CableTwist">Instructions\n
Preparation\n

Grasp stirrup from shoulder height cable pulley with both hands. Step and turn lower body away from pulley until near arm is horizontal and straight. Position feet wide apart facing away from pulley, furthest foot further away from pulley. Raise heel of nearest foot off floor. Bend knees of both legs slightly. Place far hand over other hand or interlace fingers.

\nExecution\n

Keeping arms straight, rotate torso to opposite side until cable makes contact with shoulder. Return to original position and repeat. Continue with opposite side.

\nComments\n
Both arms should be horizontal and straight. This movement arguably involves more hip internal rotation and transverse adduction than spinal rotation. Although it is considered oblique movement, remarkably little rotation actually occurs through spine, although rotators of spine act largely as stabilizers except at very beginning and end of motion where resistance from cable is minimal.

A large part of rotational force actually occurs through rotation/transverse adduction of forward hip. Because rear leg is only supported by forefoot, hip of forward leg is utilized much greater than hip of rear leg since forward leg offers more secured base of support. Continued rotation would occur through spine except when cable makes contact with body precluding further movement and resistance would no longer be provided through cable since line of force is no longer perpendicular line of pull. Seated oblique exercises or those exercises where hips are stabilized allow for greater range of movement through spine. See Spot Reduction Myth.</string>
    <string name="DbSideBend">Instructions\n
Preparation\n

Grasp dumbbell with arm straight to side.

\nExecution\n

Bend waist to opposite side of dumbbell until slight stretch is felt. Lower to opposite side, same distance and repeat. Continue with opposite side.

\nComments\n
See Spot Reduction Myth.</string>
    <string name="FrontPlank">Instructions
\nPreparation\n

Lie prone on mat. Place forearms on mat, elbows under shoulders. Place legs together with forefeet on floor.

\nExecution\n

Raise body upward by straightening body in straight line. Hold position.

\nComments\n
Muscles are exercised isometrically. Exercise can also be performed with straight supporting arms in pushup stance. Also see Spot Reduction Myth.

\nEasier\n

Movement can be made easier angling body up on elevated platform or bench. Exercise can also be performed on bent knees instead of forefeet.

\nHarder\n

Exercise could be made more challenging with added weight (eg: sandbags, partner) on hips or low back, although it is rarely performed in that manner. Raising one foot up off floor can also make holding this position more difficult. Stability Ball Rollout requires more shoulder strength.</string>
    <string name="HangingLegRaise">Instructions
\nPreparation\n

Grasp and hang from high bar with slightly wider than shoulder width overhand grip.

\nExecution\n

Raise legs by flexing hips and knees until hips are completely flexed or knees are well above hips. Return until hips and knees are extended downward. Repeat.

\nComments\n
Exercise can be performed with ab straps. Rectus Abdominis and Obliques only contract dynamically if actual waist flexion occurs. With no waist flexion, Rectus Abdominis and External Oblique will only act to stabilize pelvis and waist during hip flexion. It may be necessary to completely flex hips before waist flexion is possible, as in leg-hip raise. Also known as Hanging Knee Raise. Also see Spot Reduction Myth and Lower Ab Myth.</string>
    <string name="WheelRollout">Instructions
\nPreparation\n

Kneel on floor or mat. Grasp handles on wheel to each side with overhand grip. Position wheel near front of knees and lean over wheel with arms extended downward, supporting upper body.

\nExecution\n

With arms straight, roll wheel out as far as possible. Lower body gently to floor extending arms forward. Raise body back up by flexing hips and pulling arms back to original position. Return until hips are extended. Repeat.

\nComments\n
Keep elbows straight or nearly straight throughout exercise. Also known as Wheel Kneeling Rollout. Rectus Abdominis and Obliques practically contract isometrically since little waist flexion occurs under resistance. With no waist flexion, Rectus Abdominis and External Oblique act to stabilize pelvis and waist during hip flexion. See target muscle of rollout question. Also see Spot Reduction Myth and Lower Ab Myth.</string>
    <string name="BarbellCurl">Standing Barbell Curl Instructions
\nThe standing barbell curl is the cornerstone of many bicep building routines. Grasp a barbell or Olympic bar at around shoulder width apart using an underhand grip (palms facing up).
\nStand straight up, feet together (you may be more comfortable putting one foot back for stability), back straight, and with your arms fully extended.
\nThe bar should not be touching your body.
\nKeeping your eyes facing forwards, elbows tucked in at your sides, and your body completely still, slowly curl the bar up.
\nSqueeze your biceps hard at the top of the movement, and then slowly lower it back to the starting position.
\nRepeat for desired reps.</string>
    <string name="CableRopeCurl">How to do Rope Cable Curl:
\nStep 1: Place a rope attachment on a low pulley and stand facing the machine. You should be about 12 inches away from it.
\nStep 2: Grasp the rope with a palms-in grip. Stand straight up while keeping the natural arch of your back and torso stationary.
\nStep 3: Pull your elbows in to your side and keep them in position during the entire exercise. This is the starting position for the exercise.
\nStep 4: Use your biceps to pull your arms up until your biceps touch your forearms. Exhale as you do so.
\nStep 5: Stop for a second at the top and hold for a second while squeezing your biceps, then slowly bring your weight back to the original position.
\nStep 6: Repeat the process for the desired number of repetitions.</string>
    <string name="CloseGripBBPress">Exercise details
\nTarget muscle: Triceps Brachii
\nSynergists: Sternal (Lower) Pectoralis Major, Clavicular (Upper) Pectoralis Major, Anterior Deltoid
\nDynamic stabilizer (not highlighted): Biceps Brachii (short head only)
\nMechanics: Compound
\nForce: Push
\nStarting position
\nLie supine (on your back) on a flat bench, spread your legs, and plant your feet flat on the floor.
\nDismount the barbell using a shoulder-width grip.
\nStraighten your wrists.
\nExecution
\nKeeping your elbows close to your body, inhale as you lower the barbell to your chest.
\nExhale as you press the barbell back up to the starting position.
\nRepeat.</string>
    <string name="DbCrossbodyHamerCurl">About this exercise
\nMuscles Worked: Arms
\nDifficulty: Easy
\nEquipment needed: Dumbbells
\nStand holding two dumbbells by your sides, palms facing towards each other. One at a time, curl each weight up towards your opposing shoulder. Return under control to the start position and repeat on the other side.</string>
    <string name="DbTricepKickBack">Dumbbell Tricep Kickback Instructions\n
Set up for the tricep kickback by grabbing a flat bench and sitting a dumbbell on the left hand side at one end.\n
Position yourself on the left side of the bench with your right knee and right hand resting on the bench.\n
Using a neutral grip, pick up the dumbbell with your left hand. Keep your back straight and look forward.\n
Tuck your left upper arm close to your torso and bend at the elbow, forming a 90 degree angle with your upper arm and forearm. This is the starting position.\n
Moving only at the elbow, raise the dumbbell behind you until your arm is fully extended.\n
Pause, and then lower the dumbbell back to the starting position.\n
Repeat this movement for desired reps and then repeat using your right arm.</string>
    <string name="DeclineDBTricepExtension">About this exercise\n
Muscles Worked: Arms\n
Difficulty: Medium\n
Equipment needed: Dumbbells, Bench\n
Lie on a decline bench holding two dumbbells above your head with arms fully extended. Bright the weights down to either side of your head, only using your forearms. Return to start position and repeat.</string>
</resources>