<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SecondActivity">

    <TextView
        android:id="@+id/txtViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtWelcome"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogOut"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgWorkoutWelcomePage"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:contentDescription="@string/imgWorkoutWelcomepage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewWelcome"
        app:layout_constraintVertical_bias="0.246"
        app:srcCompat="@drawable/spartiawarriors" />

    <Button
        android:id="@+id/btnBeginWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBeginWorkOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWorkoutWelcomePage" />
</androidx.constraintlayout.widget.ConstraintLayout>